    (Yi Liu via cnauroth)

    HADOOP-10590. ServiceAuthorizationManager is not threadsafe. (Benoy Antony via vinayakumarb)

    HADOOP-10711. Cleanup some extra dependencies from hadoop-auth. (rkanter via tucu)

    HADOOP-10479. Fix new findbugs warnings in hadoop-minikdc.
    (Swarnim Kulkarni via wheat9)

    HADOOP-10715. Remove public GraphiteSink#setWriter (Babak Behzad via raviprak)

Release 2.4.1 - 2014-06-23 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-10466. Lower the log level in UserGroupInformation.  (Nicolas
    Liochon via szetszwo)

  OPTIMIZATIONS

  BUG FIXES 

    HADOOP-10455. When there is an exception, ipc.Server should first check
    whether it is an terse exception.  (szetszwo)

    HADOOP-10456. Bug in Configuration.java exposed by Spark
    (ConcurrentModificationException).  (Nishkam Ravi via cnauroth)

    HADOOP-10473. TestCallQueueManager should interrupt before counting calls.
    (szetszwo)

    HADOOP-10490. TestMapFile and TestBloomMapFile leak file descriptors.
    (cnauroth)

    HADOOP-10522. JniBasedUnixGroupMapping mishandles errors. (kihwal)

    HADOOP-10527. Fix incorrect return code and allow more retries on EINTR.
    (kihwal)

    HADOOP-10612. NFS failed to refresh the user group id mapping table (brandonli)

    HADOOP-10562. Namenode exits on exception without printing stack trace
    in AbstractDelegationTokenSecretManager. (Suresh Srinivas via Arpit
    Agarwal)

Release 2.4.0 - 2014-04-07 

  INCOMPATIBLE CHANGES

    HADOOP-8691. FsShell can print "Found xxx items" unnecessarily often.
    (Daryn Sharp via wheat9)

  NEW FEATURES

    HADOOP-10184. Hadoop Common changes required to support HDFS ACLs. (See
    breakdown of tasks below for features and contributors)

  IMPROVEMENTS

    HADOOP-10139. Update and improve the Single Cluster Setup document.
    (Akira Ajisaka via Arpit Agarwal)

    HADOOP-10295. Allow distcp to automatically identify the checksum type of 